# sailfish-device-encryption-community-generator

./: CMakeLists.txt  README.md
rpm/: generator.spec
src/: main.cpp
